--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-typed": "^1.2.0",
-    "web-vitals": "^3.3.2"
+    "web-vitals": "^3.3.2",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
